--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
   </script>
   
   <style>
+  /* Fix mobile wobble */
+  html, body {
+    overflow-x: hidden;
+    max-width: 100vw;
+  }
+
+  /* Base Typography */
+  h1, h2, h3, h4, h5, h6 {
+    font-family: 'Space Mono', monospace;
+    ...
     /* Base Typography */
     h1, h2, h3, h4, h5, h6 {
       font-family: 'Space Mono', monospace;
