--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
   </script>
   
   <style>
-  
+  html, body {
+  overflow-x: hidden;
+  width: 100%;
+}
   /* Base Typography */
   h1, h2, h3, h4, h5, h6 {
     font-family: 'Space Mono', monospace;
