--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
   
   <style>
 
+html, body {
+  overflow-x: hidden;
+  width: 100%;
+}
+
   /* Base Typography */
   h1, h2, h3, h4, h5, h6 {
     font-family: 'Space Mono', monospace;
