--- a/index.html
+++ b/index.html
@@ -35,16 +35,12 @@
   </script>
   
   <style>
+    /* Fix mobile wobble */
+    html, body {
+      overflow-x: hidden;
+      max-width: 100vw;
+    }
 
-html, body {
-  overflow-x: hidden;
-  width: 100%;
-}
-
-  /* Base Typography */
-  h1, h2, h3, h4, h5, h6 {
-    font-family: 'Space Mono', monospace;
-    ...
     /* Base Typography */
     h1, h2, h3, h4, h5, h6 {
       font-family: 'Space Mono', monospace;
